// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Analysis Builder render 1`] = `
<div>
  <div
    class="event-analysis-builder-root d-flex flex-column"
  >
    <div
      class="event-section-root d-flex align-items-center"
    >
      <div
        class="section-header"
      >
        Analyze
      </div>
      <div
        class="event-container d-flex justify-content-between"
      >
        <div
          class="event-list"
        />
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add"
            class="dropdown-toggle button-root add-event-button btn btn-sm btn-primary"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus icon-root"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="attribute-breakdown-section-root d-flex align-items-center"
    >
      <div
        class="section-header"
      >
        Breakdown
      </div>
    </div>
    <div
      class="attribute-filter-section-root d-flex align-items-center"
    >
      <div
        class="section-header"
      >
        Filter
      </div>
    </div>
  </div>
</div>
`;

exports[`Event Analysis Builder render with filters & breakdowns 1`] = `
<div>
  <div
    class="event-analysis-builder-root d-flex flex-column"
  >
    <div
      class="event-section-root d-flex align-items-center"
    >
      <div
        class="section-header"
      >
        Analyze
      </div>
      <div
        class="event-container d-flex justify-content-between"
      >
        <div
          class="event-list"
        >
          <div
            class="dropdown"
          >
            <div
              class="chip-root d-flex align-items-center justify-content-between event-chip-root"
            >
              <button
                class="button-root event-name btn btn-unstyled"
                type="button"
              >
                Article Views
              </button>
              <button
                aria-label="Close"
                class="button-root remove-button btn btn-unstyled"
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-times-circle icon-root"
                  role="presentation"
                >
                  <use
                    href="#times-circle"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="attribute-breakdown-section-root d-flex align-items-center"
    >
      <div
        class="section-header"
      >
        Breakdown
      </div>
      <div
        class="attribute-container d-flex align-items-center justify-content-between"
      >
        <div
          class="attribute-list d-flex align-items-center"
        />
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add"
            class="dropdown-toggle button-root add-attribute btn btn-outline-borderless btn-sm btn-outline-secondary"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus icon-root"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="attribute-filter-section-root d-flex align-items-center"
    >
      <div
        class="section-header"
      >
        Filter
      </div>
      <div
        class="attribute-container d-flex align-items-center justify-content-between"
      >
        <div
          class="attribute-list d-flex align-items-center"
        />
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Add"
            class="dropdown-toggle button-root add-attribute btn btn-outline-borderless btn-sm btn-outline-secondary"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-plus icon-root"
              role="presentation"
            >
              <use
                href="#plus"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
